# QCustomWindow

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
assets/: demo.mkv
pyqt_frameless_window/: __init__.py  body.py  buttons.py  frameless.py  shortcuts_mixin.py  side_grip.py  size_grips.py  snap_layout.py  title_bar.py
pyqt_frameless_window/example/: frameless_example.py
pyqt_frameless_window/style/: palettes.py  stylesheets.py
qcustomwidgets/: __init__.py
qcustomwidgets/custom_window/: buttons.py  size_grips.py  title_bar.py  window.py
qcustomwidgets/example/: custom_window_example.py
qcustomwindow/: __init__.py  title_bar.py  window.py
qcustomwindow/custom_window/: buttons.py  size_grips.py  title_bar.py  utils.py  window.py
qcustomwindow/example/: custom_window_example.py
qcustomwindow/style/: palettes.py
