[project]
name = "pyqt-frameless-window"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pywin32>=311",
]

[project.optional-dependencies]
pyqt = [
    "pyqt6",
]
pyside = [
    "pyside6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyqt_frameless_window*"]

[tool.setuptools.package-data]
"*" = ["*.gif", "*.svg"]
