[project]
name = "qcustomwindow"
version = "0.3.3"
description = "PyQt6/PySide6 native jitterless resizable window with custom tittle bar and all Windows features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pywin32>=311",
    "qcustomwidgets",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
pyqt = [
    "pyqt6",
]
pyside = [
    "pyside6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qcustomwindow*"]

[tool.setuptools.package-data]
"*" = ["*.gif", "*.svg"]

[tool.uv]
config-settings = { editable_mode = "compat" }

[tool.uv.sources]
qcustomwidgets = { git = "https://github.com/CrinitusFeles/QCustomWidgets" }
